tests/errors/type3.ramen
SELECT (1; 2) - (3; 4) AS x;
